<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HTI</string>
    <string name="action_settings">Settings</string>
    <string name="title_section_user_infos">Your informations</string>
    <string name="title_section_run">Running</string>
    <string name="title_section_rides">Display rides</string>
    <string name="title_section_graph">Charts</string>
    <string name="messageGPS">display my  GPS position</string>
    <string name="messageWifi">display my  Wifi position</string>
    <string name="messageCache">Start recording position when click</string>
    <string name="messageDisplay">Display cache</string>
    <string name="hintLogin">example@mail.com</string>
    <string name="showLogin">E-mail</string>
    <string name="hintPassword">Your password</string>
    <string name="showPassword">Password</string>
    <string name="buttonLogin">Sign in</string>
    <string name="welcomeText">Welcome to HTI !</string>
    <string name="startButton">Let\'s Run !</string>
    <string name="replaceImageViewRideRow">Image</string>
    <string name="refreshRidesList">Refresh rides list</string>
    <string name="welcomeMessage">Email : </string>
    <string name="weightMessage">Your weight is : </string>
    <string name="updateWeight">Update your weight : </string>
    <string name="updateWeightButtonText">Update your informations</string>
    <string name="action_about">About</string>
    <string name="about_text_title">HTI android app.</string>
    <string name="about_text">Created by :\n - Thomas Carayol\n - Gabriel Farache\n - Mathilde Menet</string>
    <string name="action_help">Help</string>
    <string name="help_text_title">HTI android app.</string>
    <string name="help_text">You can switch between Normal/Satellite view using your Volume key (Up/Down). Have fun :)</string>


</resources>
