<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_main_user_informations"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="5" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:contentDescription="@string/about_text_title"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/test_icon_check" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/welcomeMessage"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
        
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:contentDescription="@string/about_text_title"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/test_icon_check" />

        <TextView
            android:id="@+id/userWeight"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/weightMessage"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </GridLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textDisplayWeightUpdate"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/updateWeight"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:ems="10"
            android:inputType="numberSigned"
            android:maxLength="3"
            android:minWidth="60dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/updateWeightButton"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:minHeight="38dp"
            android:text="@string/updateWeightButtonText"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/holo_orange_dark"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
